Atualização do Swagger
