# app/controllers/UserController.js
@@ -1,31 +1,41 @@
-var express = require('express'); 
+var express = require('express');
 var UserModel = require('../models/user');
 
 SignUp = (req, res) => {
     /*
-    #swagger.parameters['newuser'] = {
-        in: 'body',
-        type: 'obj',
-        schema: { $ref: '#/definitions/User' 
-    }
-
-    #swagger.responses[200] = {
-        "msg": "User jsmith@fake-mail.com successfully signedup."
+    #swagger.requestBody = {
+        required: true,
+        content: {
+            "application/json": {
+                schema: { $ref: "#/definitions/User1" }  
+            }
+        }
     }
     */
+    /*
+    #swagger.responses[201] = {
+        description: "Created",
+        content: {
+            "application/json": {
+                schema: { $ref: "#/definitions/OkSignUp" }
+            }           
+        }
+    }
 
-    var newuser = new UserModel();      
+    */
+
+    var newuser = new UserModel();
 
     newuser.name = req.body.name;
     newuser.email = req.body.email;
     newuser.role = 'client';
     newuser.password = req.body.password;
-   
-    newuser.save(function(err) {
-        if (err){        
+
+    newuser.save(function (err) {
+        if (err) {
             res.status(400).send(err);
         }
-        else{
+        else {
             res.status(201).send({ msg: `User ${req.body.email} successfully signedup.` });
         }
     });
@@ -33,33 +43,37 @@ SignUp = (req, res) => {
 
 SignIn = (req, rep) => {
     /*
-        #swagger.parameters['user'] = {
-            in: 'body',
-            type: 'obj',
-            schema: {             
-                $email: 'jsmith@fake-mail.com',
-                $password: 'thisisastrongpassword',
+        #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: { $ref: "#/definitions/User2" }  
+                }
             }
         }
-        #swagger.responses[200] = {
-            role: "client",
-            token: "eyJhbGciOi.NjIxMDc2MX0.o3CL-Sf8gh6wBj0"
-        }
-        */
-  
-        UserModel.findOne(req.body, function(err, theUser){
-            if(err)
-                res.send(err);
-            if (theUser===null){
-                res.status(401).send([]);     
-            }else{
-                const jwtBearerToken = jwt.sign({email:req.body.email, role:theUser.role}, process.env.SECRET,  {expiresIn: 1800});                
-                res.status(201).send({
-                        role: theUser.role,
-                        token: jwtBearerToken
-                }); 
+        #swagger.responses[201] = {
+            description: "Created",
+            content: {
+                "application/json": {
+                    schema: { $ref: "#/definitions/SuccessfulSignIn" }  
+                }           
             }
-        })
+        }  
+    */
+
+    UserModel.findOne(req.body, function (err, theUser) {
+        if (err)
+            res.send(err);
+        if (theUser === null) {
+            res.status(401).send([]);
+        } else {
+            const jwtBearerToken = jwt.sign({ email: req.body.email, role: theUser.role }, process.env.SECRET, { expiresIn: 1800 });
+            res.status(201).send({
+                role: theUser.role,
+                token: jwtBearerToken
+            });
+        }
+    })
 }
 
 GetAllUsers = (req, res) => {
@@ -67,20 +81,27 @@ GetAllUsers = (req, res) => {
     #swagger.security = [{
         "bearerAuth": []
     }]
-    #swagger.responses[200] = [
-    {
-        "id": "63503ad1884c9bbb94551374",
-        "name": "John Smith",
-        "email": "jsmith@fake-mail.com",
-        "password": "thisisastrongpassword",
-        "role": "client"
-    }]
+
+    #swagger.responses[200] = {
+        description: "OK",
+        content: {
+            "application/json": {
+                schema:{ $ref: "#/definitions/User3" }
+            }           
+        }
+    } 
+
     #swagger.responses[403] = {
-        msg: "User jsmith@fake-mail.com have no authorization."
-    }
+        description: "Forbidden",
+        content: {
+            "application/json": {
+                schema:{ $ref: "#/definitions/UnAuthMsg" }
+            }           
+        }
+    } 
     */
     hasRole(req.role, 'manager', function (decision) {
-        if (!decision) 
+        if (!decision)
             return res.status(403).send({ msg: `User ${req.body.email} have no authorization.` });
         else
             UserModel.find(function (err, existingEntities) {
@@ -91,7 +112,7 @@ GetAllUsers = (req, res) => {
     })
 }
 
-function hasRole(userRole, role, func){
+function hasRole(userRole, role, func) {
     func(userRole === role);
 }
 
